<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="characterModel"
            type="ankit.com.starwarssample.model.CharacterPresentationModel" />

        <variable
            name="characterDetailViewModel"
            type="ankit.com.starwarssample.view.characterdetails.CharacterDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_character_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/character_details"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/personal_details_layout"
            layout="@layout/personal_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_character_details"
            bind:character="@{characterModel}"/>

        <TextView
            android:id="@+id/tv_homeworld"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/home_world"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_details_layout"
            tools:text="Home World" />

        <include
            android:id="@+id/home_world_details_layout"
            layout="@layout/home_world_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_homeworld"
            bind:viewModel="@{characterDetailViewModel}"/>

        <TextView
            android:id="@+id/tv_species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/species"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_world_details_layout"
            tools:text="Species" />

        <TextView
            android:id="@+id/tv_species_unavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/dp16"
            android:text="No data available"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tv_species"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_species" />

        <TextView
            android:id="@+id/tv_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_species"
            android:textStyle="bold"
            android:textSize="@dimen/sp20"
            android:text="@string/movies"
            tools:text="Movies"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movies"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>